# twitter-sentiment

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  config.sample.yaml  sqlx-data.json
.github/workflows/: docker.yml  rust.yml
migrations/: 20220123160935_initial.sql  20220211171309_primary_key_performace.sql
src/: classifier.rs  data.rs  database.rs  lib.rs  main.rs  settings.rs  twitter_stream.rs
src/server/: error.rs  mod.rs  routes.rs  svg.rs  templates.rs
templates/: list_keywords.htm
