[package]
name = "twitter-sentiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.0"
axum = "0.4.3"
bincode = "2.0.0-beta.0"
color-eyre = "0.5.11"
config = "0.11.0"
derive_builder = "0.10.2"
dotenv = "0.15.0"
egg-mode = "0.16.0"
futures = "0.3.19"
poloto = "3.13.1"
rust-bert = "0.17.0"
serde = { version = "1.0.133", features = ["derive"] }
time = { version = "0.3.5", features = ["formatting"] }
tokio = { version = "1.15.0", features = ["full"] }
